@@ -538,34 +538,55 @@ RelSatSolver::receiveUNSAT()
   else
     {
       collect_learned_clauses(xSATSolver->getLearnedClauses());
+      const SignatureByCtx& local_sig = boost::get<Tag::Ctx>(*sig);
+      SignatureByCtx::const_iterator it;
+      Decisionlevel* decision;
+      PartialBeliefState* interface_impossible;
+      PartialBeliefState* partial_ass;
 
-      // take decision level from parent into account
+      *partial_ass = *parent_ass;
+
       if (trail->empty())
 	{
-	  PartialBeliefState* partial_ass = new PartialBeliefState(system_size, PartialBeliefSet());
-	  Decisionlevel* decision;
-	  const SignatureByCtx& local_sig = boost::get<Tag::Ctx>(*sig);
-	  SignatureByCtx::const_iterator low = local_sig.lower_bound(my_id);
-	  SignatureByCtx::const_iterator up  = local_sig.upper_bound(my_id);
-	  SignatureByCtx::const_iterator it;
+	  *decision = *parent_decision;
+	  *interface_impossible = *input;
+	} // if (trail->empty())
+      else
+	{
+	  ChoicePointPtr& cp = trail->top();
+	  decision = cp->decision; // parent_decision is included
+	} // if (trail->empty())
 
-	  // pick the first bridge atom to flip
-	  if (local_sig.begin() != low)
+      it = findFirstUndecided(my_id, local_sig, decision, orig_sigs_size);
+
+      if (it == local_sig.end())
+	{
+	  DMCS_LOG_TRACE(port << ": The parents decided all of my bridge atoms and I am still UNSAT. Send a NULL pointer to OUT_MQ");
+	  mg->sendModel(0, 0, ConcurrentMessageQueueFactory::OUT_MQ, 0);
+	}
+      else
+	{
+	  if (!trail->empty())
 	    {
-	      it = local_sig.begin();
-	    }
-	  else
-	    {
-	      assert (up != local_sig.end());
-	      it = up;
+	      // Cancel the last push 
+	      std::size_t last_decided_atom = decision->last();
+
+	      VecSizeT::const_iterator ot = orig_sigs_size->begin();
+	      PartialBeliefState::const_iterator jt = partial_ass->begin();
+	      while (last_decided_atom > (*ot))
+		{
+		  last_decided_atom -= (*ot);
+		  ++it;
+		  ++jt;
+		}
+
+	      setBeliefSet(*jt, last_decided_atom, PartialBeliefSet::DMCS_UNDEF);
 	    }
 
-	  const std::size_t gid = global_id(it, orig_sigs_size);
-
-	  // set the opposite value in input
+	  // There is an atom to flip. Set the opposite value in input
 	  PartialBeliefSet& input_pbs = (*input)[it->ctxId - 1];
 	  PartialBeliefSet& partial_ass_pbs = (*partial_ass)[it->ctxId - 1];
-
+	  
 	  PartialBeliefSet::TruthVal val = testBeliefSet(input_pbs, it->localId);
 	  assert (val != PartialBeliefSet::DMCS_UNDEF);
 	  
@@ -577,16 +598,12 @@ RelSatSolver::receiveUNSAT()
 	    {
 	      setBeliefSet(partial_ass_pbs, it->localId);
 	    }
-
+	  
 	  decision->setDecisionlevel(gid);
-
+	  
 	  ChoicePointPtr cp(new ChoicePoint(input, decision));
 	  trail->push(cp);
-	  
-	} // if (trail->empty())
-      else
-	{
-	} // if (trail->empty())
+	}
     }
 }
 
